--- a/app/views/images/_annotation_row.html.erb
+++ b/app/views/images/_annotation_row.html.erb
@@ -1,11 +1,17 @@
 <tr class="annotation-row" annotation-data="<%= annotation.data.to_json%>">
-	<td><%=annotation.label%></td>
-	<td><%=annotation.created_at.to_s(:short)%></td>
-	<td>
-		<% if annotation.runs.count == 0 %>
-			<%=link_to annotation_path(annotation), :data => {:method=> :delete, :confirm => 'Are you sure you want to delete this annotation?'} do %>
-			<i style="font-size:18px;" class="material-icons" role="presentation">delete</i>
-			<%end%>
-		<%end%>
-	</td>
+    <td>
+    <% if annotation.runs.count == 0 %>
+        <%= check_box_tag "annotation_ids[]", annotation.id, false, class: 'annotation-check-box'%>
+    <%end%>
+    </td>
+    <td><%=annotation.label%></td>
+    <td><%=annotation.data[0][0].to_s%></td>
+    <td><%=annotation.created_at.to_s(:short)%></td>
+    <td>
+        <% if annotation.runs.count == 0 %>
+            <%=link_to annotation_path(annotation), :data => {:method=> :delete, :confirm => 'Are you sure you want to delete this annotation?'} do %>
+            <i style="font-size:18px;" class="material-icons" role="presentation">delete</i>
+            <%end%>
+        <%end%>
+    </td>
 </tr>
