--- a/app/views/images/_drawer_annotations.html.erb
+++ b/app/views/images/_drawer_annotations.html.erb
@@ -45,9 +45,13 @@
   <table class="annotations-table table table-hover">
     <thead>
       <tr>
+        <th><input type="checkbox" id="select_all"/></th>
         <th>Label</th>
+        <th>Object</th>
         <th>Date</th>
-        <th></th>
+        <th><%= form_tag delete_selected_annotations_path do %>
+                <%= submit_tag "Delete", :style=> 'float:right; margin-left:10px;', :class=> 'btn btn-success btn-raised'%>
+            </th>
       </tr>
     </thead>
     <tbody>
@@ -55,5 +59,16 @@
         <%= render partial: "annotation_row", locals: {annotation: annotation_item} %>
       <% end %>
     </tbody>
+	<% end %>
   </table>
 </ul>
+<script>
+$("#select_all").click( function() {
+    if($(this).is(':checked')){
+        $(".annotation-check-box").attr('checked', true);
+    }
+       else{
+           $(".annotation-check-box").attr('checked', false);
+       }
+});
+</script>
