--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,56 +1,57 @@
 <%= form_for(@run, :html => {:multipart => true}) do |f| %>
-	<div class="form-group">
-		<%= f.label :algorithm_id, "Select an algorithm to run" %>
-		<%= f.collection_select :algorithm_id, @algorithm, :id, :title_with_type, {include_blank: 'Please select'}, { class: 'form-control', required: true } %>
-	</div>
-	<% if @image.threed? %>
-		<div class="form-group twod-algorithm-slice-select" style="display:none;">
-			<%= f.label :image_id, "Select a image slice for analysis (applicable for 2D algorithms)" %>
-			<%= f.collection_select :image_id, @slices, :id, :slice_order, {}, { class: 'form-control' } %>
-		</div>
-	<% else %>
-		<%= f.hidden_field :image_id, :value=> @image.id %>
-	<% end %>
+    <div class="form-group">
+        <%= f.label :algorithm_id, "Select an algorithm to run" %>
+        <%= f.collection_select :algorithm_id, @algorithm, :id, :title_with_type, {include_blank: 'Please select'}, { class: 'form-control', required: true } %>
+    </div>
+    <% if @image.threed? %>
+        <div class="form-group twod-algorithm-slice-select" style="display:none;">
+            <%= f.label :image_id, "Select a image slice for analysis (applicable for 2D algorithms)" %>
+            <%= f.collection_select :image_id, @slices, :id, :slice_order, {}, { class: 'form-control' } %>
+        </div>
+    <% else %>
+        <%= f.hidden_field :image_id, :value=> @image.id %>
+    <% end %>
 
-	<div id="annotation-select" class="form-group">
-	</div>
+    <div id="annotation-select" class="form-group">
+    </div>
 
-	<div class="form-group">
-		<%= f.label :tile_size, "Tile Size (in pixels)" %>
-		<%= f.select :tile_size, @tilesizes, { :selected => 128 }, {class: 'form-control', required: true, value: []} %>
-	</div>
+    <div class="form-group">
+        <%= f.label :tile_size, "Tile Size (in pixels)" %>
+        <%= f.select :tile_size, @tilesizes, { :selected => 128 }, {class: 'form-control', required: true, value: []} %>
+    </div>
 
 
-	<br/><br/>
-	<h5>Algorithm Parameters</h5>
-	<hr/>
-	<div id="algorithm-parameters-form">
-	</div>
-  	<%= f.submit "Start Analysis", {class: "float-right btn-raised btn-success"} %>
+    <br/><br/>
+    <h5>Algorithm Parameters</h5>
+    <hr/>
+    <div id="algorithm-parameters-form">
+    </div>
+      <%= f.submit "Start Analysis", {class: "float-right btn-raised btn-success"} %>
 <%end %>
 
 <script>
-	$('#run_algorithm_id').change(function(){
-		$.get( '<%=parameter_form_algorithms_path%>', {
-			  	'image_id': <%= @image.id %>,
-			  	'algorithm_id': $(this).val()
-		}).done(function(partial){
-			$('#algorithm-parameters-form').html(partial);
-		});
+    $('#run_algorithm_id').change(function(){
+        $.get( '<%=parameter_form_algorithms_path%>', {
+                  'image_id': <%= @image.id %>,
+                  'algorithm_id': $(this).val()
+        }).done(function(partial){
+            $('#algorithm-parameters-form').html(partial);
+        });
 
-		$.get( '<%=annotation_form_runs_path%>', {
-				'image_id': <%= @image.id %>
-		}).done(function(partial){
-			$('#annotation-select').html(partial);
-		})
-	});
+        $.get( '<%=annotation_form_runs_path%>', {
+                'image_id': <%= @image.id %>
+        }).done(function(partial){
+            $('#annotation-select').html(partial);
+        })
+    });
 
-	$('#run_algorithm_id').change(function(){
-		if($(this).find(":selected").text().includes('3D Algorithm')){
-			$('.twod-algorithm-slice-select').css('display', 'none');
-		}else{
-			$('.twod-algorithm-slice-select').css('display', 'block');
-		}
-	})
+    $('#run_algorithm_id').change(function(){
+        if($(this).find(":selected").text().includes('3D Algorithm')){
+            $('.twod-algorithm-slice-select').css('display', 'none');
+            $('#run_image_id').prepend("<option value= <%= @image.id %> selected='selected'></option>");
+        }else{
+            $('.twod-algorithm-slice-select').css('display', 'block');
+        }
+    })
 
 </script>
