mass conversion updates

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -18,6 +18,6 @@ Digital Pathology Goals:
 	<li>Establish a growing library of public pathology images and algorithms for public use.</li>
 </ul>
 
-For more information on how to use this workbench, please visit our <a href="https://slimwiki.com/digital-pathology/">wiki</a> for more information or if you would like to distribute your algorithms via our platform, please contact <a href="mailto:ays0110@gmail.com">Alice Shen</a> of Dr. Kong's lab.
+For more information on how to use this workbench, please visit our <a href="https://slimwiki.com/digital-pathology/">wiki</a> for more information or if you would like to distribute your algorithms via our platform, please contact <a href="dbhuvanapalli1@student.gsu.edu">Divya Bhuvanapalli</a> of Dr. Kong's lab.
 
 </div>
