--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -19,7 +19,7 @@
 	  </thead>
 	  <tbody>
 	  	<%= form_tag confirm_3d_images_path do %>
-		<%= submit_tag "Delete", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> confirm_delete_runs_path %>
+                <%= submit_tag "Delete", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> confirm_delete_runs_path, :disabled => @current_user.reviewer? %>
 		<%= submit_tag "Share", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-primary", :formaction=>  confirm_share_user_run_ownerships_path %>
 	  	<% @runs.each do |run| %>
 	  		<tr class="click-link <% if run.complete %>table-success<%elsif run.processing%>table-info<%else%>table-warning<%end%>" data-link="<%=run_path(run)%>">
