--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
           <a class="nav-link" href="/about">About<a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://slimwiki.com/digital-pathology">Wiki<a>
+          <a class="nav-link" href="https://slimwiki.com/imageviewer/">Wiki<a>
         </li>
 <!--         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="images-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
